--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <!-- build:css assets/styles/head.css -->
         <!-- endbuild -->
         <link rel="stylesheet" media="screen, projection" href="assets/styles/modern.css" />
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
 
     <body>
@@ -27,34 +28,20 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Store</a>
+                    <a class="navbar-brand" href="#/">Store</a>
                 </div>
                 <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="#">Cart (3)</a>
+                            <a href="#/cart/">Cart (3)</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <p class="lead">Category</p>
-                    <div class="list-group">
-                        <a href="#" class="list-group-item">Bad Monkey</a>
-                        <a href="#" class="list-group-item">Spider Monkey</a>
-                        <a href="#" class="list-group-item">Rat</a>
-                    </div>
-                </div>
-                <div class="col-md-9">
-                    <div class="row js-productList">
+        <div class="container js-childViewContainer">
 
-                    </div>
-                </div>
-            </div>
         </div>
 
         <div class="container">
