--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,19 @@
                     </button>
                     <a class="navbar-brand" href="#/">Store</a>
                 </div>
+
                 <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
+                        <li>
+                            <form class="navbar-form" role="search">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                                    <div class="input-group-btn">
+                                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                    </div>
+                                </div>
+                            </form>
+                        </li>
                         <li>
                             <a href="#/cart/">Cart (3)</a>
                         </li>
