--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                     <a class="navbar-brand" href="#/">Store</a>
                 </div>
 
-                <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
+                <div class="collapse navbar-collapse pull-right js-topNavView" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
                             <form class="navbar-form" role="search">
@@ -44,7 +44,7 @@
                             </form>
                         </li>
                         <li>
-                            <a href="#/cart/">Cart (3)</a>
+                            <a href="#/cart/" class="">Cart (<span class="js-topNavView-cartCount">0</span>)</a>
                         </li>
                     </ul>
                 </div>
