--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                         <li>
                             <form class="navbar-form" role="search">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                                    <input type="text" class="form-control js-topNavView-searchInput" placeholder="Search" name="srch-term" id="srch-term">
                                     <div class="input-group-btn">
                                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                                     </div>
